add new website from server na

--- a/xem-phim-moi/tu-xuan-dao-3-vo-gian-luyen-nguc/index.html
+++ b/xem-phim-moi/tu-xuan-dao-3-vo-gian-luyen-nguc/index.html
@@ -1197,7 +1197,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1711,21 +1711,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/alien-resurrection" title="Alien: Resurrection">
+          <a class="list-top-movie-link" href="/phim-moi/ke-deo-bam-phan-3" title="Kẻ đeo bám (Phần 3)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/alien-resurrection-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ke-deo-bam-phan-3-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Alien: Resurrection
+             Kẻ đeo bám (Phần 3)
             </span>
             <span class="list-top-movie-item-en">
-             Alien: Resurrection
+             You (Season 3)
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1733,21 +1733,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nam-ngam" title="Nằm Ngầm">
+          <a class="list-top-movie-link" href="/phim-moi/tham-vong-the-gioi-ngam" title="Tham vọng thế giới ngầm">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nam-ngam-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tham-vong-the-gioi-ngam-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nằm Ngầm
+             Tham vọng thế giới ngầm
             </span>
             <span class="list-top-movie-item-en">
-             Nằm Ngầm
+             Sky High
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1755,40 +1755,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/trong-sinh-chi-danh-luu-cu-tinh" title="Trọng Sinh Chi Danh Lưu Cự Tinh">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/trong-sinh-chi-danh-luu-cu-tinh-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Trọng Sinh Chi Danh Lưu Cự Tinh
-            </span>
-            <span class="list-top-movie-item-en">
-             Revive
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/toc-do" title="Tốc Độ">
+          <a class="list-top-movie-link" href="/phim-moi/doraemon-nobita-va-binh-doan-nguoi-sat" title="Doraemon: Nobita và Binh Đoàn Người Sắt">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/toc-do-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doraemon-nobita-va-binh-doan-nguoi-sat-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tốc Độ
+             Doraemon: Nobita và Binh Đoàn Người Sắt
             </span>
             <span class="list-top-movie-item-en">
-             Speed
+             Doraemon: Nobita and the New Steel Troops: Angel Wings
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1799,21 +1777,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/anh-hung-phan-hac" title="Anh Hùng Phản Hắc">
+          <a class="list-top-movie-link" href="/phim-moi/hanh-trinh-cua-amy-winehouse" title="Hành Trình Của Amy Winehouse">
            <span class="status">
-            HD Lồng Tiếng
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/anh-hung-phan-hac-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hanh-trinh-cua-amy-winehouse-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Anh Hùng Phản Hắc
+             Hành Trình Của Amy Winehouse
             </span>
             <span class="list-top-movie-item-en">
-             No Room for Crime
+             Amy
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/an-tu-tren-xe" title="Án Tử Trên Xe">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/an-tu-tren-xe-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Án Tử Trên Xe
+            </span>
+            <span class="list-top-movie-item-en">
+             Hard Hit
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
