add new website from server na

--- a/xem-phim-moi/mau-ta-ac-do/index.html
+++ b/xem-phim-moi/mau-ta-ac-do/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1785,62 +1785,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/am-anh" title="Ám Ảnh">
+          <a class="list-top-movie-link" href="/phim-moi/doc-tam-tham-an" title="Độc Tâm Thám Án">
            <span class="status">
-            HD Vietsub
+            Thuyết Minh - HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/am-anh-2012-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doc-tam-tham-an-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ám Ảnh
+             Độc Tâm Thám Án
             </span>
             <span class="list-top-movie-item-en">
-             The Black Dahlia Haunting
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/walid" title="Walid">
-           <span class="status">
-            Vietsub - HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/walid-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Walid
-            </span>
-            <span class="list-top-movie-item-en">
-             Walid
-            </span>
-            <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/rua-tien-be-boi-tai-lieu-panama" title="Rửa tiền: Bê bối tài liệu Panama">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/rua-tien-be-boi-tai-lieu-panama-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Rửa tiền: Bê bối tài liệu Panama
-            </span>
-            <span class="list-top-movie-item-en">
-             The Laundromat
+             Ask The Conscience
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1851,21 +1807,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tinh-huynh-de-co-bay-phap-phoi" title="Tình Huynh Đệ – Cờ Bay Phấp Phới">
+          <a class="list-top-movie-link" href="/phim-moi/tinh-yeu-den-trang" title="Tình Yêu Đen Trắng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-huynh-de-co-bay-phap-phoi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-yeu-den-trang-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tình Huynh Đệ – Cờ Bay Phấp Phới
+             Tình Yêu Đen Trắng
             </span>
             <span class="list-top-movie-item-en">
-             Tae Guk Gi: The Brotherhood Of War
+             Siyah Beyaz Ask
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1873,18 +1829,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tien-hac-am" title="Tiên Hắc Ám">
+          <a class="list-top-movie-link" href="/phim-moi/sang-mat" title="Sáng Mắt">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tien-hac-am-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sang-mat-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tiên Hắc Ám
+             Sáng Mắt
             </span>
             <span class="list-top-movie-item-en">
-             Maleficent
+             Open Your Eyes
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/toi-se-chet-trong-co-don-nhung-chang-sao-ca" title="Tôi Sẽ Chết Trong Cô Đơn (Nhưng Chẳng Sao Cả)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/toi-se-chet-trong-co-don-nhung-chang-sao-ca-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tôi Sẽ Chết Trong Cô Đơn (Nhưng Chẳng Sao Cả)
+            </span>
+            <span class="list-top-movie-item-en">
+             Jen Kirkman: I'm Gonna Die Alone (And I Feel Fine)
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/ben-kia-may-troi-la-noi-hen-uoc" title="Bên kia mây trời, là nơi hẹn ước">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ben-kia-may-troi-la-noi-hen-uoc-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Bên kia mây trời, là nơi hẹn ước
+            </span>
+            <span class="list-top-movie-item-en">
+             The Place Promised in Our Early Days
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
