--- a/xem-phim-moi/mau-ta-ac-do/index.html
+++ b/xem-phim-moi/mau-ta-ac-do/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1785,18 +1785,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/doc-tam-tham-an" title="Độc Tâm Thám Án">
+          <a class="list-top-movie-link" href="/phim-moi/ama" title="Ama">
            <span class="status">
-            Thuyết Minh - HD Thuyết Minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doc-tam-tham-an-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ama-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Độc Tâm Thám Án
+             Ama
             </span>
             <span class="list-top-movie-item-en">
-             Ask The Conscience
+             Ama
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1807,21 +1807,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tinh-yeu-den-trang" title="Tình Yêu Đen Trắng">
+          <a class="list-top-movie-link" href="/phim-moi/anh-em-nha-gau-2" title="Anh Em Nhà Gấu 2">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-yeu-den-trang-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/anh-em-nha-gau-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tình Yêu Đen Trắng
+             Anh Em Nhà Gấu 2
             </span>
             <span class="list-top-movie-item-en">
-             Siyah Beyaz Ask
+             Brother Bear 2
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1829,21 +1829,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/sang-mat" title="Sáng Mắt">
+          <a class="list-top-movie-link" href="/phim-moi/face-off" title="Face/Off">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sang-mat-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/faceoff-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Sáng Mắt
+             Face/Off
             </span>
             <span class="list-top-movie-item-en">
-             Open Your Eyes
+             Face/Off
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1851,21 +1851,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/toi-se-chet-trong-co-don-nhung-chang-sao-ca" title="Tôi Sẽ Chết Trong Cô Đơn (Nhưng Chẳng Sao Cả)">
+          <a class="list-top-movie-link" href="/phim-moi/cocomelon-bai-hat-thieu-nhi-phan-5" title="Cocomelon: Bài hát thiếu nhi (Phần 5)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/toi-se-chet-trong-co-don-nhung-chang-sao-ca-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cocomelon-bai-hat-thieu-nhi-phan-5-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tôi Sẽ Chết Trong Cô Đơn (Nhưng Chẳng Sao Cả)
+             Cocomelon: Bài hát thiếu nhi (Phần 5)
             </span>
             <span class="list-top-movie-item-en">
-             Jen Kirkman: I'm Gonna Die Alone (And I Feel Fine)
+             CoComelon (Season 5)
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1873,21 +1873,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ben-kia-may-troi-la-noi-hen-uoc" title="Bên kia mây trời, là nơi hẹn ước">
+          <a class="list-top-movie-link" href="/phim-moi/hoi-uc-ke-sat-nhan-2" title="Hồi ức kẻ sát nhân">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ben-kia-may-troi-la-noi-hen-uoc-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoi-uc-ke-sat-nhan-2021-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bên kia mây trời, là nơi hẹn ước
+             Hồi ức kẻ sát nhân
             </span>
             <span class="list-top-movie-item-en">
-             The Place Promised in Our Early Days
+             Memoir of a Murderer
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
