--- a/xem-phim-moi/thi-the-bi-bo-roi/index.html
+++ b/xem-phim-moi/thi-the-bi-bo-roi/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1785,18 +1785,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cua-ro-trung-hoc-phan-2" title="Cua-rơ trung học (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/duong-dau-voi-thu-thach-5" title="Đương Dầu Với Thử Thách 5">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cua-ro-trung-hoc-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/duong-dau-voi-thu-thach-5-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cua-rơ trung học (Phần 2)
+             Đương Dầu Với Thử Thách 5
             </span>
             <span class="list-top-movie-item-en">
-             Yowamushi Pedal (Season 2)
+             A Good Day to Die Hard
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1807,18 +1807,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tinh-ban" title="Tình Bạn">
+          <a class="list-top-movie-link" href="/phim-moi/genesis-the-creation-and-the-flood" title="Genesis: The Creation and the Flood">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-ban-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/genesis-the-creation-and-the-flood-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tình Bạn
+             Genesis: The Creation and the Flood
             </span>
             <span class="list-top-movie-item-en">
-             Close
+             Genesi: La creazione e il diluvio
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1829,18 +1829,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/khi-luat-su-yeu" title="Khi Luật Sư Yêu">
+          <a class="list-top-movie-link" href="/phim-moi/tam-thanh-ky" title="Tam Thành Ký">
            <span class="status">
-            HD Thuyết Minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khi-luat-su-yeu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tam-thanh-ky-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Khi Luật Sư Yêu
+             Tam Thành Ký
             </span>
             <span class="list-top-movie-item-en">
-             Love And Law
+             A Tale of Three Cities
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1851,21 +1851,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/the-fabric-of-the-cosmos" title="The Fabric of the Cosmos">
+          <a class="list-top-movie-link" href="/phim-moi/con-trai-cua-nguoi-doi" title="Con Trai Của Người Dơi">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-fabric-of-the-cosmos-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/con-trai-cua-nguoi-doi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             The Fabric of the Cosmos
+             Con Trai Của Người Dơi
             </span>
             <span class="list-top-movie-item-en">
-             The Fabric of the Cosmos
+             Son of Batman
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1873,21 +1873,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/berlin-i-love-you" title="Berlin, I Love You">
+          <a class="list-top-movie-link" href="/phim-moi/chuyen-tinh-the-chien" title="Chuyện Tình Thế Chiến">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/berlin-i-love-you-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-tinh-the-chien-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Berlin, I Love You
+             Chuyện Tình Thế Chiến
             </span>
             <span class="list-top-movie-item-en">
-             Berlin, I Love You
+             Casablanca
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
