add new website from server na

--- a/xem-phim-moi/thi-the-bi-bo-roi/index.html
+++ b/xem-phim-moi/thi-the-bi-bo-roi/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1785,18 +1785,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/duong-dau-voi-thu-thach-5" title="Đương Dầu Với Thử Thách 5">
+          <a class="list-top-movie-link" href="/phim-moi/black-as-night" title="Black as Night">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/duong-dau-voi-thu-thach-5-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/black-as-night-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đương Dầu Với Thử Thách 5
+             Black as Night
             </span>
             <span class="list-top-movie-item-en">
-             A Good Day to Die Hard
+             Black as Night
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/trai-giam-kieu-my-phan-1" title="Trại Giam Kiểu Mỹ (Phần 1)">
+           <span class="status">
+            HD 720p Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/trai-giam-kiem-my-phan-1-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Trại Giam Kiểu Mỹ (Phần 1)
+            </span>
+            <span class="list-top-movie-item-en">
+             Orange Is The New Black (Season 1)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1807,40 +1829,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/genesis-the-creation-and-the-flood" title="Genesis: The Creation and the Flood">
+          <a class="list-top-movie-link" href="/phim-moi/ngai-cao-tuyet-voi" title="Ngài Cáo Tuyệt Vời">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/genesis-the-creation-and-the-flood-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngai-cao-tuyet-voi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Genesis: The Creation and the Flood
+             Ngài Cáo Tuyệt Vời
             </span>
             <span class="list-top-movie-item-en">
-             Genesi: La creazione e il diluvio
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tam-thanh-ky" title="Tam Thành Ký">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tam-thanh-ky-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Tam Thành Ký
-            </span>
-            <span class="list-top-movie-item-en">
-             A Tale of Three Cities
+             Fantastic Mr. Fox
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1851,21 +1851,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/con-trai-cua-nguoi-doi" title="Con Trai Của Người Dơi">
+          <a class="list-top-movie-link" href="/phim-moi/the-bear-phan-2" title="The Bear (Phần 2)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/con-trai-cua-nguoi-doi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-bear-phan-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Con Trai Của Người Dơi
+             The Bear (Phần 2)
             </span>
             <span class="list-top-movie-item-en">
-             Son of Batman
+             The Bear (Season 2)
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1873,21 +1873,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chuyen-tinh-the-chien" title="Chuyện Tình Thế Chiến">
+          <a class="list-top-movie-link" href="/phim-moi/dai-tan-de-quoc-chi-thien-ha" title="Đại Tần Đế Quốc: Chí thiên hạ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-tinh-the-chien-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dai-tan-de-quoc-chi-thien-ha-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chuyện Tình Thế Chiến
+             Đại Tần Đế Quốc: Chí thiên hạ
             </span>
             <span class="list-top-movie-item-en">
-             Casablanca
+             Qin Empire: Alliance
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
+             7 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
